--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Anexos/5_Desktop/SicacestAdmin/build/
 /Anexos/5_Desktop/SicacestAdmin/dist/
 /Anexos/5_Desktop/SicacestAdmin/nbproject/private/
+/Anexos/Etapa3/2_Desktop/SicacestAdmin/dist/
