Actualización del diseño de las interfaces Login y Admin

--- a/Anexos/Etapa3/2_Desktop/SicacestAdmin/nbproject/project.properties
+++ b/Anexos/Etapa3/2_Desktop/SicacestAdmin/nbproject/project.properties
@@ -31,14 +31,16 @@ dist.jar=${dist.dir}/SicacestAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=/home/b41n/Frameworks/Java/JFreeChart/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/home/b41n/Frameworks/Java/JFreeChart/jfreechart-1.0.19.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
