Charts And Reports INIT

--- a/Anexos/3_Desarrollo/1_Java/2_Desktop/SicacestAdmin/nbproject/project.properties
+++ b/Anexos/3_Desarrollo/1_Java/2_Desktop/SicacestAdmin/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.jar=${dist.dir}/SicacestAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.1.jar=/home/b41n/Frameworks/Java/iText/itextpdf-5.5.1.jar
 file.reference.jcommon-1.0.23.jar=/home/b41n/Frameworks/Java/JFreeChart/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=/home/b41n/Frameworks/Java/JFreeChart/jfreechart-1.0.19.jar
 includes=**
@@ -40,7 +41,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.itextpdf-5.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
