--- a/3_Desarrollo/1_Platform/2_Desktop/SicacestAdmin/nbproject/project.properties
+++ b/3_Desarrollo/1_Platform/2_Desktop/SicacestAdmin/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.1.jar=/home/b41n/Frameworks/Java/iText/itextpdf-5.5.1.jar
+file.reference.jcalendar-1.3.3.jar=/home/b41n/Frameworks/Java/JCalendar/jcalendar-1.3.3.jar
 file.reference.jcommon-1.0.23.jar=/home/b41n/Frameworks/Java/JFreeChart/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=/home/b41n/Frameworks/Java/JFreeChart/jfreechart-1.0.19.jar
 includes=**
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.itextpdf-5.5.1.jar}
+    ${file.reference.itextpdf-5.5.1.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
