--- a/Code/Desktop/SicacestAdmin/nbproject/project.properties
+++ b/Code/Desktop/SicacestAdmin/nbproject/project.properties
@@ -31,20 +31,13 @@ dist.jar=${dist.dir}/SicacestAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.itextpdf-5.5.1.jar-1=C:\\Users\\Brayan\\Documents\\JavaLibs\\itextpdf-5.5.1.jar
-file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\Brayan\\Documents\\JavaLibs\\jcalendar-1.3.3.jar
-file.reference.jcommon-1.0.23.jar-1=C:\\Users\\Brayan\\Documents\\JavaLibs\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Brayan\\Documents\\JavaLibs\\jfreechart-1.0.19.jar
+file.reference.libs.jar=C:\\frameworks\\Mods\\libs.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.1.jar-1}:\
-    ${file.reference.jcalendar-1.3.3.jar-1}:\
-    ${file.reference.jcommon-1.0.23.jar-1}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.libs.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
