Actualización del Estudiante

--- a/Code/Desktop/SicacestAdmin/nbproject/project.properties
+++ b/Code/Desktop/SicacestAdmin/nbproject/project.properties
@@ -31,7 +31,7 @@ dist.jar=${dist.dir}/SicacestAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.libs.jar=C:\\frameworks\\Mods\\libs.jar
+file.reference.libs.jar=/home/b41n/Frameworks/Mods/libs.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
